--- a/styles/style.css
+++ b/styles/style.css
@@ -1,183 +1,308 @@
-.page {
-  min-width: 1100px;
-  max-width: 1600px;
-  width: 100%;
-  margin: 0 auto;
-  font-family: Arial, sans-serif;
-  font-size: 16px;
-  line-height: 20px;
+html {
+  scroll-behavior: smooth;
 }
 
-.header {
+  .page {
+    min-width: 1100px;
+    max-width: 1600px;
+    width: 100%;
+    margin: 0 auto;
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .header {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    min-height: 720px;
+    max-height: 800px;
+    padding: 30px 80px 40px;
+    position: relative;
+    box-sizing: border-box;
+    overflow: hidden;
+  }
+
+  .nav {
+    height: 100px;
+    width: auto;
+    margin-bottom: 58px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .nav__logo {
+    height: 80px;
+    width: 58px;
+  }
+
+  .nav__links {
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    margin: 8px 0 0;
+    column-gap: 20px;
+  }
+
+  .nav__link {
+    color: #000000;
+    text-decoration: none;
+    font-weight: bold;
+  }
+
+  .header__content {
+    margin-top: 128px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 40px;
+  }
+
+  .header__title {
+    font-size: 62px;
+    line-height: 76px;
+    max-width: 635px;
+    font-weight: 500;
+    margin-top: 0;
+  }
+
+  .header__description {
+    max-width: 515px;
+    line-height: 30px;
+    font-size: 20px;
+    margin-top: 32px;
+    margin-bottom: 0;
+  }
+
+  .header__image {
+    max-width: 636px;
+    max-height: 450px;
+    height: auto;
+    width: auto;
+    object-fit: contain;
+    margin-top: -60px;
+  }
+
+  .header__footer {
+    margin-top: auto;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    box-sizing: border-box;
+  }
+
+  .header__link {
+    color: #2f80ed;
+    text-decoration: none;
+  }
+
+  .header__address {
+    margin: 0;
+    color: #838383;
+  }
+
+  .staff {
+    background-image: url("../images/staff_picks_background.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    padding: 100px 0 140px;
+  }
+
+  .staff__title {
+    text-align: center;
+    font-size: 44px;
+    line-height: 52px;
+    font-weight: 400;
+    margin: 0 0 24px;
+    color: #ffffff;
+  }
+
+  .staff__subtitle {
+    text-align: center;
+    font-size: 20px;
+    line-height: 30px;
+    font-weight: 400;
+    margin: 0;
+    color: #ffffff;
+  }
+
+  .staff__cards {
+    list-style-type: none;
+    padding: 0;
+    margin: 68px auto 0;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 40px;
+    max-width: 760px;
+  }
+
+  .card {
+    background-color: #fff;
+    border-radius: 6px;
+    padding: 32px 40px 20px 32px;
+    box-sizing: border-box;
+    height: 420px;
+    width: 360px;
+  }
+
+  .card__content {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .card__title {
+    font-size: 20px;
+    line-height: 30px;
+    font-weight: 700;
+    margin: 0;
+  }
+
+  .card__text {
+    margin: 20px 0 0;
+    font-size: 16px;
+    line-height: 24px;
+    display: -webkit-box;
+    -webkit-line-clamp: 6;
+    line-clamp: 6;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
+
+  .card__footer {
+    margin: 0;
+    margin-top: auto;
+    font-size: 14px;
+    line-height: 20px;
+    color: #838383;
+  }
+}
+
+.events {
+  padding: 100px 0 120px 80px;
   display: flex;
-  flex-direction: column;
-  height: 100vh;
-  min-height: 720px;
-  max-height: 800px;
-  padding: 30px 80px 40px;
-  position: relative;
+  align-items: start;
+  justify-content: space-between;
   box-sizing: border-box;
-  overflow: hidden;
+  background-color: #f2f2f2;
 }
 
-.nav {
-  height: 100px;
-  width: auto;
-  margin-bottom: 58px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+.events__content {
+  flex-basis: 580px;
 }
 
-.nav__logo {
-  height: 80px;
-  width: 58px;
-}
-
-.nav__links {
-  list-style-type: none;
-  padding: 0;
-  display: flex;
-  margin: 8px 0 0;
-  column-gap: 20px;
-}
-
-.nav__link {
-  color: #000000;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-.header__content {
-  margin-top: 128px;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  gap: 40px;
-}
-
-.header__title {
-  font-size: 62px;
-  line-height: 76px;
-  max-width: 635px;
-  font-weight: 500;
-  margin-top: 0;
-}
-
-.header__description {
-  max-width: 515px;
-  line-height: 30px;
+.events__heading {
   font-size: 20px;
+  font-weight: 500;
+  line-height: 30px;
+  margin: 0;
+}
+
+.events__title {
+  font-size: 44px;
+  font-weight: 500;
+  line-height: 52px;
+  margin: 32px 0 0;
+}
+
+.events__info-section {
   margin-top: 32px;
-  margin-bottom: 0;
 }
 
-.header__image {
-  max-width: 636px;
-  max-height: 450px;
-  height: auto;
-  width: auto;
-  object-fit: contain;
-  margin-top: -60px;
-}
-
-.header__footer {
-  margin-top: auto;
-  width: 100%;
+.event-info__item {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
-  box-sizing: border-box;
+  margin-bottom: 4px;
+  font-weight: 500;
 }
 
-.header__link {
+.event-info__icon {
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-right: 12px;
+  width: 24px;
+  height: 24px;
+}
+
+.event-info__text {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 30px;
+  margin: 0;
+}
+
+.events__description {
+  margin: 40px 0 60px;
+}
+
+.events__more {
   color: #2f80ed;
   text-decoration: none;
 }
 
-.header__address {
-  margin: 0;
-  color: #838383;
+.events__cover {
+  /* flex-grow: 1;
+  flex-shrink: 0;
+  flex-basis: 780px;
+  max-width: 780px;
+  position: relative; */
 }
 
-.staff {
-  background-image: url("../images/staff_picks_background.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  padding: 100px 0 140px;
+.events__image {
+  /* max-width: 100%; */
 }
 
-.staff__title {
-  text-align: center;
-  font-size: 44px;
-  line-height: 52px;
-  font-weight: 400;
-  margin: 0 0 24px;
-  color: #ffffff;
-}
-
-.staff__subtitle {
-  text-align: center;
-  font-size: 20px;
-  line-height: 30px;
-  font-weight: 400;
-  margin: 0;
-  color: #ffffff;
-}
-
-.staff__cards {
-  list-style-type: none;
-  padding: 0;
-  margin: 68px auto 0;
+.person {
+  /* position: absolute;
   display: flex;
-  flex-wrap: wrap;
-  gap: 40px;
-  max-width: 760px;
-}
-
-.card {
-  background-color: #fff;
-  border-radius: 6px;
-  padding: 32px 40px 20px 32px;
-  box-sizing: border-box;
-  height: 420px;
-  width: 360px;
-}
-
-.card__content {
-  width: 100%;
-  height: 100%;
-  display: flex;
+  align-items: center;
   flex-direction: column;
+  gap: 10px; */
 }
 
-.card__title {
-  font-size: 20px;
-  line-height: 30px;
-  font-weight: 700;
-  margin: 0;
+.person_name_feynman {
+  /* Utiliza los valores correctos de las propiedades top/right/bottom/left para posicionar el elemento */
 }
 
-.card__text {
-  margin: 20px 0 0;
-  font-size: 16px;
-  line-height: 24px;
-  display: -webkit-box;
-  -webkit-line-clamp: 6;
-  line-clamp: 6;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
+.person_name_burbidge {
+  /* Utiliza los valores correctos de las propiedades top/right/bottom/left para posicionar el elemento */
 }
 
-.card__footer {
-  margin: 0;
-  margin-top: auto;
+.person_name_cannon {
+  /* Utiliza los valores correctos de las propiedades top/right/bottom/left para posicionar el elemento */
+}
+
+.person_name_mitchell {
+  /* Utiliza los valores correctos de las propiedades top/right/bottom/left para posicionar el elemento */
+}
+
+.person_name_tarter {
+  /* Utiliza los valores correctos de las propiedades top/right/bottom/left para posicionar el elemento */
+}
+
+.person__image {
+  /* max-width: 100%; */
+}
+
+.person__image_size_l {
+  /* width: 140px; */
+}
+
+.person__image_size_m {
+  /* width: 100px; */
+}
+
+.person__image_size_s {
+  /* width: 80px; */
+}
+
+.person__caption {
+  /* text-align: center;
   font-size: 14px;
-  line-height: 20px;
-  color: #838383;
-}
-
-html {
-  scroll-behavior: smooth;
+  margin: 0; */
 }
