--- a/styles/style.css
+++ b/styles/style.css
@@ -2,185 +2,184 @@ html {
   scroll-behavior: smooth;
 }
 
-  .page {
-    min-width: 1100px;
-    max-width: 1600px;
-    width: 100%;
-    margin: 0 auto;
-    font-family: Arial, sans-serif;
-    font-size: 16px;
-    line-height: 20px;
-  }
+.page {
+  min-width: 1100px;
+  max-width: 1600px;
+  width: 100%;
+  margin: 0 auto;
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+}
 
-  .header {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    min-height: 720px;
-    max-height: 800px;
-    padding: 30px 80px 40px;
-    position: relative;
-    box-sizing: border-box;
-    overflow: hidden;
-  }
+.header {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  min-height: 720px;
+  max-height: 800px;
+  padding: 30px 80px 40px;
+  position: relative;
+  box-sizing: border-box;
+  overflow: hidden;
+}
 
-  .nav {
-    height: 100px;
-    width: auto;
-    margin-bottom: 58px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
+.nav {
+  height: 100px;
+  width: auto;
+  margin-bottom: 58px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
-  .nav__logo {
-    height: 80px;
-    width: 58px;
-  }
+.nav__logo {
+  height: 80px;
+  width: 58px;
+}
 
-  .nav__links {
-    list-style-type: none;
-    padding: 0;
-    display: flex;
-    margin: 8px 0 0;
-    column-gap: 20px;
-  }
+.nav__links {
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  margin: 8px 0 0;
+  column-gap: 20px;
+}
 
-  .nav__link {
-    color: #000000;
-    text-decoration: none;
-    font-weight: bold;
-  }
+.nav__link {
+  color: #000000;
+  text-decoration: none;
+  font-weight: bold;
+}
 
-  .header__content {
-    margin-top: 128px;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    gap: 40px;
-  }
+.header__content {
+  margin-top: 128px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 40px;
+}
 
-  .header__title {
-    font-size: 62px;
-    line-height: 76px;
-    max-width: 635px;
-    font-weight: 500;
-    margin-top: 0;
-  }
+.header__title {
+  font-size: 62px;
+  line-height: 76px;
+  max-width: 635px;
+  font-weight: 500;
+  margin-top: 0;
+}
 
-  .header__description {
-    max-width: 515px;
-    line-height: 30px;
-    font-size: 20px;
-    margin-top: 32px;
-    margin-bottom: 0;
-  }
+.header__description {
+  max-width: 515px;
+  line-height: 30px;
+  font-size: 20px;
+  margin-top: 32px;
+  margin-bottom: 0;
+}
 
-  .header__image {
-    max-width: 636px;
-    max-height: 450px;
-    height: auto;
-    width: auto;
-    object-fit: contain;
-    margin-top: -60px;
-  }
+.header__image {
+  max-width: 636px;
+  max-height: 450px;
+  height: auto;
+  width: auto;
+  object-fit: contain;
+  margin-top: -60px;
+}
 
-  .header__footer {
-    margin-top: auto;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    box-sizing: border-box;
-  }
+.header__footer {
+  margin-top: auto;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  box-sizing: border-box;
+}
 
-  .header__link {
-    color: #2f80ed;
-    text-decoration: none;
-  }
+.header__link {
+  color: #2f80ed;
+  text-decoration: none;
+}
 
-  .header__address {
-    margin: 0;
-    color: #838383;
-  }
+.header__address {
+  margin: 0;
+  color: #838383;
+}
 
-  .staff {
-    background-image: url("../images/staff_picks_background.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    padding: 100px 0 140px;
-  }
+.staff {
+  background-image: url("../images/staff_picks_background.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 100px 0 140px;
+}
 
-  .staff__title {
-    text-align: center;
-    font-size: 44px;
-    line-height: 52px;
-    font-weight: 400;
-    margin: 0 0 24px;
-    color: #ffffff;
-  }
+.staff__title {
+  text-align: center;
+  font-size: 44px;
+  line-height: 52px;
+  font-weight: 400;
+  margin: 0 0 24px;
+  color: #ffffff;
+}
 
-  .staff__subtitle {
-    text-align: center;
-    font-size: 20px;
-    line-height: 30px;
-    font-weight: 400;
-    margin: 0;
-    color: #ffffff;
-  }
+.staff__subtitle {
+  text-align: center;
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 400;
+  margin: 0;
+  color: #ffffff;
+}
 
-  .staff__cards {
-    list-style-type: none;
-    padding: 0;
-    margin: 68px auto 0;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 40px;
-    max-width: 760px;
-  }
+.staff__cards {
+  list-style-type: none;
+  padding: 0;
+  margin: 68px auto 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 40px;
+  max-width: 760px;
+}
 
-  .card {
-    background-color: #fff;
-    border-radius: 6px;
-    padding: 32px 40px 20px 32px;
-    box-sizing: border-box;
-    height: 420px;
-    width: 360px;
-  }
+.card {
+  background-color: #fff;
+  border-radius: 6px;
+  padding: 32px 40px 20px 32px;
+  box-sizing: border-box;
+  height: 420px;
+  width: 360px;
+}
 
-  .card__content {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-  }
+.card__content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
 
-  .card__title {
-    font-size: 20px;
-    line-height: 30px;
-    font-weight: 700;
-    margin: 0;
-  }
+.card__title {
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 700;
+  margin: 0;
+}
 
-  .card__text {
-    margin: 20px 0 0;
-    font-size: 16px;
-    line-height: 24px;
-    display: -webkit-box;
-    -webkit-line-clamp: 6;
-    line-clamp: 6;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-  }
+.card__text {
+  margin: 20px 0 0;
+  font-size: 16px;
+  line-height: 24px;
+  display: -webkit-box;
+  -webkit-line-clamp: 6;
+  line-clamp: 6;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
 
-  .card__footer {
-    margin: 0;
-    margin-top: auto;
-    font-size: 14px;
-    line-height: 20px;
-    color: #838383;
-  }
+.card__footer {
+  margin: 0;
+  margin-top: auto;
+  font-size: 14px;
+  line-height: 20px;
+  color: #838383;
 }
 
 .events {
@@ -246,43 +245,48 @@ html {
 }
 
 .events__cover {
-  /* flex-grow: 1;
+  flex-grow: 1;
   flex-shrink: 0;
   flex-basis: 780px;
   max-width: 780px;
-  position: relative; */
+  position: relative;
 }
 
 .events__image {
-  /* max-width: 100%; */
+  max-width: 100%;
 }
 
 .person {
-  /* position: absolute;
+  position: absolute;
   display: flex;
   align-items: center;
   flex-direction: column;
-  gap: 10px; */
+  gap: 10px;
 }
 
 .person_name_feynman {
-  /* Utiliza los valores correctos de las propiedades top/right/bottom/left para posicionar el elemento */
+  top: -30px;
+  right: 319px;
 }
 
 .person_name_burbidge {
-  /* Utiliza los valores correctos de las propiedades top/right/bottom/left para posicionar el elemento */
+  top: 96px;
+  right: 125px;
 }
 
 .person_name_cannon {
-  /* Utiliza los valores correctos de las propiedades top/right/bottom/left para posicionar el elemento */
+  bottom: 18px;
+  right: 216px;
 }
 
 .person_name_mitchell {
-  /* Utiliza los valores correctos de las propiedades top/right/bottom/left para posicionar el elemento */
+  bottom: 82px;
+  left: 142px;
 }
 
 .person_name_tarter {
-  /* Utiliza los valores correctos de las propiedades top/right/bottom/left para posicionar el elemento */
+  top: 109px;
+  left: 159px;
 }
 
 .person__image {
@@ -290,19 +294,19 @@ html {
 }
 
 .person__image_size_l {
-  /* width: 140px; */
+  width: 140px;
 }
 
 .person__image_size_m {
-  /* width: 100px; */
+  width: 100px;
 }
 
 .person__image_size_s {
-  /* width: 80px; */
+  width: 80px;
 }
 
 .person__caption {
-  /* text-align: center;
+  text-align: center;
   font-size: 14px;
-  margin: 0; */
+  margin: 0;
 }
