--- a/styles/style.css
+++ b/styles/style.css
@@ -65,7 +65,8 @@ html {
   line-height: 76px;
   max-width: 635px;
   font-weight: 500;
-  margin: 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .header__description {
@@ -138,6 +139,7 @@ html {
   flex-wrap: wrap;
   gap: 40px;
   max-width: 760px;
+  justify-content: center;
 }
 
 .card {
@@ -265,7 +267,7 @@ html {
 }
 
 .person_name_feynman {
-  top: 30px;
+  top: -30px;
   right: 319px;
 }
 
