--- a/styles/style.css
+++ b/styles/style.css
@@ -66,7 +66,7 @@ html {
   max-width: 635px;
   font-weight: 500;
   margin: 0;
-  margin-top: 62px;
+  margin-top: 128px;
 }
 
 .header__description {
@@ -259,7 +259,7 @@ html {
 }
 
 .person {
-  position: absolute;
+  position: relative;
   display: flex;
   align-items: center;
   flex-direction: column;
