correccion styles.css

--- a/styles/style.css
+++ b/styles/style.css
@@ -268,7 +268,7 @@ html {
 .person_name_feynman {
   position: absolute;
   top: -35px;
-  left: 319px;
+  right: 319px;
 }
 
 .person_name_burbidge {
