--- a/styles/style.css
+++ b/styles/style.css
@@ -66,7 +66,6 @@ html {
   max-width: 635px;
   font-weight: 500;
   margin: 0;
-  margin-top: 128px;
 }
 
 .header__description {
@@ -258,7 +257,7 @@ html {
 }
 
 .person {
-  position: relative;
+  position: absolute;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -267,8 +266,8 @@ html {
 
 .person_name_feynman {
   position: absolute;
-  top: -35px;
-  right: 319px;
+  top: -30px;
+  right: 30px;
 }
 
 .person_name_burbidge {
