Corrijo posicion de person_name_feynman segun el brief

--- a/styles/style.css
+++ b/styles/style.css
@@ -267,7 +267,7 @@ html {
 .person_name_feynman {
   position: absolute;
   top: -30px;
-  right: 30px;
+  left: 319px;
 }
 
 .person_name_burbidge {
