Correccion del proyecto final sprint 3

--- a/styles/style.css
+++ b/styles/style.css
@@ -344,7 +344,6 @@ html {
 
 .step {
   flex-basis: 220px;
-  background-color: #0468d4;
   padding: 32px 24px;
   border-radius: 6px;
   box-sizing: border-box;
@@ -383,7 +382,6 @@ html {
 
 .footer__columns {
   display: flex;
-  justify-content: space-between;
   width: 100%;
   max-width: 1100px;
   margin-bottom: 100px;
@@ -398,10 +396,10 @@ html {
 
 .footer__column_content_hours {
   margin-left: auto;
-  margin-right: 80px;
 }
 
 .footer__column_content_social {
+  margin-left: 80px;
   text-align: right;
 }
 
